[gd_scene load_steps=3 format=3 uid="uid://cd605lyxxwdng"]

[ext_resource type="Script" path="res://Views/GameOverView/game_over_view.gd" id="1_p6ido"]
[ext_resource type="Texture2D" uid="uid://c180sdffixp4s" path="res://Assets/ChemicalFlask1.png" id="2_571tj"]

[node name="GameOverView" type="Control" node_paths=PackedStringArray("enemies_killed_label", "enemies_possessed_label", "powerups_gained_label", "time_survived_label")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6ido")
enemies_killed_label = NodePath("Panel/MarginContainer/VBoxContainer/HBoxContainer/EnemiesKilled")
enemies_possessed_label = NodePath("Panel/MarginContainer/VBoxContainer/HBoxContainer2/EnemiesPosessed")
powerups_gained_label = NodePath("Panel/MarginContainer/VBoxContainer/HBoxContainer3/PowerupsGained")
time_survived_label = NodePath("Panel/MarginContainer/VBoxContainer/HBoxContainer5/TimeSurvived")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -214.0
offset_right = 214.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Game Over"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_571tj")
stretch_mode = 5

[node name="EnemiesKilled" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Enemies Killed:"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_571tj")
stretch_mode = 5

[node name="EnemiesPosessed" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Enemies Posessed:"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_571tj")
stretch_mode = 5

[node name="PowerupsGained" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Powerups Gained:"
horizontal_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_571tj")
stretch_mode = 5

[node name="TimeSurvived" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Time Survived:"
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Retry"

[node name="Button2" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Title"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer4/Button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer4/Button2" to="." method="_on_quit_button_pressed"]
